# sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  clean.sh  cmake_build.sh  cmake_codelite.sh  cmake_makefile.sh  cmake_ninja.sh  cmake_test.sh  cmake_vsstudio.bat  log.txt  main.c
